# terraform-provider-linuxkit

./: .bazelrc  .gitignore  .goreleaser.yml  .travis.yml  BUILD  Gopkg.toml  LICENCE  LICENSE  Makefile  README.md  WORKSPACE  data_metadata.go  go.mod  go.sum  main.go  provider.go
.github/workflows/: release.yml
docs/: index.md
docs/d/: linuxkit_file.md  linuxkit_init.md  linuxkit_trust.md
docs/data-sources/: config.md  file.md  image.md  init.md  kernel.md  metadata.md  trust.md
docs/r/: linuxkit_image_aws.md  linuxkit_image_gcp.md  linuxkit_image_iso_bios.md  linuxkit_image_iso_efi.md  linuxkit_image_kernel_initrd.md  linuxkit_image_qcow2_efi.md  linuxkit_image_raw_bios.md  linuxkit_image_rpi3.md  linuxkit_image_tar_kernel_initrd.md  linuxkit_image_vhd.md
docs/resources/: build.md  image_aws.md  image_dynamic_vhd.md  image_gcp.md  image_iso_bios.md  image_iso_efi.md  image_kernel_initrd.md  image_kernel_squashfs.md  image_qcow2_bios.md  image_qcow2_efi.md  image_raw_bios.md  image_raw_efi.md  image_rpi3.md  image_tar_kernel_initrd.md  image_vhd.md  image_vmdk.md
examples/docker/: .gitignore  .terraform.lock.hcl  config.yaml  linuxkit.tf
examples/sshd/: Dockerfile  linuxkit.tf  providers.tf
linuxkit/: BUILD.bazel  cache.go  common.go  data_metadata.go  data_source_config.go  data_source_file.go  data_source_image.go  data_source_init.go  data_source_init_test.go  data_source_kernel.go  data_source_metadata.go  data_source_trust.go  provider.go  provider_test.go  resource_build.go  resource_image_aws.go  resource_image_dynamic_vhd.go  resource_image_gcp.go  resource_image_iso_bios.go  resource_image_iso_efi.go  resource_image_kernel_initrd.go  resource_image_kernel_squashfs.go  resource_image_qcow2_bios.go  resource_image_qcow2_efi.go  resource_image_raw_bios.go  resource_image_raw_efi.go  resource_image_rpi3.go  resource_image_tar_kernel_initrd.go  resource_image_vhd.go  resource_image_vmdk.go  resource_images.go  util.go
templates/: index.md.tmpl
